# inventario

./: .gitignore  README.md  api.py  gerar_etiqueta.py  menu.py  pyproject.toml  requirements.txt  sql.py  teste_levantamento.db  tratamento.py
data_silver/: historico_levantamento_2025-04-17.json  historico_levantamento_2025-04-21.json  historico_levantamento_2025-04-23.json  historico_levantamento_2025-04-26.json  historico_levantamento_2025-04-27.json  historico_levantamento_2025-04-28.json  historico_levantamento_2025-04-29.json  historico_levantamento_2025-05-03.json  historico_levantamento_2025-05-05.json  historico_levantamento_2025-05-06.json  historico_levantamento_2025-05-07.json  historico_levantamento_2025-05-08.json  historico_levantamento_2025-05-11.json  historico_levantamento_2025-05-12.json  historico_levantamento_2025-05-13.json  historico_levantamento_2025-05-14.json  historico_levantamento_2025-05-15.json  historico_levantamento_2025-05-22.json
pages/: credenciamento.py  levantamento.py  status_base.py  status_levantamento.py
queries/: count_local.py  count_user.py  insert_data_levantamento.py
src/: contrato_de_dados_sql.py  controller.py  db.py  main.py  models.py  schema.py
tratamento/: tratamento_streamlit.py
