[tool.poetry]
name = "y"
version = "0.1.0"
description = ""
authors = ["Mateus Pinheiro <mateus.mcpa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13.0"
pandas = "^2.2.3"
streamlit = "^1.44.0"
openpyxl = "^3.1.5"
python-calamine = "^0.3.2" # Verifique a versão mais recente no PyPI
tqdm = "^4.67.1"   # Verifique a versão mais recente no PyPI

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
