[tool.poetry]
name = "y"
version = "0.1.0"
description = ""
authors = ["Mateus Pinheiro <mateus.mcpa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13.0"
pandas = "^2.2.3"
streamlit = "^1.44.0"
openpyxl = "^3.1.5"
python-calamine = "^0.3.2" # Verifique a versão mais recente no PyPI
tqdm = "^4.67.1"   # Verifique a versão mais recente no PyPI
pillow = "^11.2.1"
python-barcode = "^0.14.0"
python-levenshtein = "0.27.1"
rapidfuzz = "3.13.0"
reportlab = "4.3.1"
pypdf2 = "^3.0.1"
sqlmodel = "^0.0.24"
python-dateutil = "2.8.2"
sqlalchemy = "^2.0.40"
psycopg2-binary = "^2.9.10"
dotenv = "^0.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
